# Data-Science-Projects

./: UV_QUICK_REFERENCE.txt  UV_SETUP_GUIDE.md  pyproject.toml  requiremnts.txt
Data Wrangling/: Data Wrangling.ipynb  Import Data.ipynb  clean_df.csv  practice_data_wrangling.jupyterlite.ipynb
Exploratory Data Analysis/: Exploratory_data_analysis.jupyterlite.ipynb  Exploratory_data_analysis_cars.ipynb
Model Development/: Model-Development.ipynb
Model Evaluation/: Model-Evaluation-and-Refinement.ipynb
Sample/: Largest_economies.csv  Simple-API-2--v2-v2.ipynb  Web-Scraping.ipynb
Stock Price and Revenue/: Final Assignment Webscraping.ipynb  Final_Assignment Library.ipynb  WebScraping_Review_Lab.ipynb  apple.json
